--- a/api-dev.yml
+++ b/api-dev.yml
@@ -31,7 +31,7 @@ spring:
     testWhileIdle: true
     testOnBorrow: false
     testOnReturn: false
-    # 打开PSCache，并且指定每个连接上PSCache的大小
+    # 打开PSCache，并且指定每个连接上PSCache的大小1
     poolPreparedStatements: true
     maxPoolPreparedStatementPerConnectionSize: 20
     # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
